--- a/careers.html
+++ b/careers.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html  lang="en">
-
-<!-- Mirrored from misty.tiwitravel.com/careers by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 15 May 2025 05:25:24 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -863,7 +860,7 @@
                             <div class="copyright">
                 <div class="col-sm-12">
                     <p class="text-center mb-0">
-                        ©2025 Misty Homes is proudly made by JustWebKe.
+                       ©2025 Misty Homes is proudly made by Silvia Mwashi.
                     </p>
                 </div>
             </div>
@@ -907,7 +904,6 @@
 <script src="vendor/core/plugins/announcement/js/announcement.js"></script>
 
 </body>
-
-<!-- Mirrored from misty.tiwitravel.com/careers by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 15 May 2025 05:25:33 GMT -->
+ 
 </html>
 
