--- a/about-us.html
+++ b/about-us.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html  lang="en">
 
-<!-- Mirrored from misty.tiwitravel.com/about-us by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 15 May 2025 05:21:07 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -794,7 +794,7 @@
                             <div class="copyright">
                 <div class="col-sm-12">
                     <p class="text-center mb-0">
-                        ©2025 Misty Homes is proudly made by JustWebKe.
+                       ©2025 Misty Homes is proudly made by Silvia Mwashi.
                     </p>
                 </div>
             </div>
@@ -839,6 +839,6 @@
 
 </body>
 
-<!-- Mirrored from misty.tiwitravel.com/about-us by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 15 May 2025 05:21:07 GMT -->
+
 </html>
 
