--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html  lang="en">
 
-<!-- Mirrored from misty.tiwitravel.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 15 May 2025 05:18:20 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -1399,7 +1399,7 @@
                             <div class="copyright">
                 <div class="col-sm-12">
                     <p class="text-center mb-0">
-                        ©2025 Misty Homes is proudly made by JustWebKe.
+                        ©2025 Misty Homes is proudly made by Silvia Mwashi.
                     </p>
                 </div>
             </div>
@@ -1444,7 +1444,6 @@
 
 </body>
 
-<!-- Mirrored from misty.tiwitravel.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 15 May 2025 05:19:55 GMT -->
 </html>
 
 
