--- a/register.html
+++ b/register.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html  lang="en">
 
-<!-- Mirrored from misty.tiwitravel.com/register by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 15 May 2025 05:26:01 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -1070,7 +1069,7 @@
                             <div class="copyright">
                 <div class="col-sm-12">
                     <p class="text-center mb-0">
-                        ©2025 Misty Homes is proudly made by JustWebKe.
+                        ©2025 Misty Homes is proudly made by Silvia Mwashi.
                     </p>
                 </div>
             </div>
@@ -1157,6 +1156,5 @@
 
 </body>
 
-<!-- Mirrored from misty.tiwitravel.com/register by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 15 May 2025 05:26:01 GMT -->
 </html>
 
