--- a/wishlist.html
+++ b/wishlist.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html  lang="en">
 
-<!-- Mirrored from misty.tiwitravel.com/wishlist by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 15 May 2025 05:20:55 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -763,7 +762,7 @@
                             <div class="copyright">
                 <div class="col-sm-12">
                     <p class="text-center mb-0">
-                        ©2025 Misty Homes is proudly made by JustWebKe.
+                        ©2025 Misty Homes is proudly made by Silvia Mwashi.
                     </p>
                 </div>
             </div>
@@ -808,6 +807,5 @@
 
 </body>
 
-<!-- Mirrored from misty.tiwitravel.com/wishlist by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 15 May 2025 05:20:57 GMT -->
 </html>
 
